# wasmasc

./: Cargo.toml  README.md  justfile
src/: lib.rs  main.rs
